@@ -129,10 +129,16 @@ The standard deviations of the best-fit parameters are given by the
 square root of the corresponding diagonal elements of
 the covariance matrix, @c{$\sigma_{c_a} = \sqrt{C_{aa}}$}
 @math{\sigma_@{c_a@} = \sqrt@{C_@{aa@}@}}.
+The correlation coefficient of the parameters @math{c_a} and @math{c_b}
+is given by @c{$\rho_{ab} = C_{ab} / \sqrt{C_{aa} C_{bb}}$}
+@math{\rho_@{ab@} = C_@{ab@} / \sqrt@{C_@{aa@} C_@{bb@}@}}.
 
 @node   Linear regression
 @section Linear regression
 @cindex linear regression
+@cindex correlation coefficient, rho
+@cindex rho, correlation coefficient
+
 The functions described in this section can be used to perform
 least-squares fits to a straight line model, @math{Y(c,x) = c_0 + c_1 x}.
 
@@ -147,7 +153,8 @@ parameters (@var{c0}, @var{c1}) is estimated from the scatter of the
 points around the best-fit line and returned via the parameters
 (@var{cov00}, @var{cov01}, @var{cov11}).   
 The sum of squares of the residuals from the best-fit line is returned
-in @var{sumsq}.
+in @var{sumsq}.  The correlation coefficient of the fit is @c{$\rho = @var{cov01} / \sqrt{@var{cov00} * @var{cov01}}$}
+@math{\rho = @var{cov01} / \sqrt@{@var{cov00} * @var{cov11}@}}.
 @end deftypefun
 
 @deftypefun int gsl_fit_wlinear (const double * @var{x}, const size_t @var{xstride}, const double * @var{w}, const size_t @var{wstride}, const double * @var{y}, const size_t @var{ystride}, size_t @var{n}, double * @var{c0}, double * @var{c1}, double * @var{cov00}, double * @var{cov01}, double * @var{cov11}, double * @var{chisq})
@@ -165,10 +172,10 @@ of the residuals from the best-fit line, @math{\chi^2}, is returned in
 @var{chisq}.
 @end deftypefun
 
-@deftypefun int gsl_fit_linear_est (double @var{x}, double @var{c0}, double @var{c1}, double @var{c00}, double @var{c01}, double @var{c11}, double * @var{y}, double * @var{y_err})
+@deftypefun int gsl_fit_linear_est (double @var{x}, double @var{c0}, double @var{c1}, double @var{cov00}, double @var{cov01}, double @var{cov11}, double * @var{y}, double * @var{y_err})
 This function uses the best-fit linear regression coefficients
-@var{c0},@var{c1} and their covariance
-@var{cov00},@var{cov01},@var{cov11} to compute the fitted function
+@var{c0}, @var{c1} and their covariance
+@var{cov00}, @var{cov01}, @var{cov11} to compute the fitted function
 @var{y} and its standard deviation @var{y_err} for the model @math{Y =
 c_0 + c_1 X} at the point @var{x}.
 @end deftypefun
@@ -205,7 +212,7 @@ squares of the residuals from the best-fit line, @math{\chi^2}, is
 returned in @var{chisq}.
 @end deftypefun
 
-@deftypefun int gsl_fit_mul_est (double @var{x}, double @var{c1}, double @var{c11}, double * @var{y}, double * @var{y_err})
+@deftypefun int gsl_fit_mul_est (double @var{x}, double @var{c1}, double @var{cov11}, double * @var{y}, double * @var{y_err})
 This function uses the best-fit linear regression coefficient @var{c1}
 and its covariance @var{cov11} to compute the fitted function
 @var{y} and its standard deviation @var{y_err} for the model @math{Y =
