@@ -1,3 +1,9 @@
+2007-05-23  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gsl_fit.h linear.c (gsl_fit_mul_est, gsl_fit_linear_est): made
+	parameters in prototypes for _est functions consistent,
+	c00->cov00, c01->cov01, c11 -> cov11
+
 2004-12-23  Brian Gough  <bjg@network-theory.co.uk>
 
 	* gsl_fit.h: remove unused declarations
